# Quata

./: .gitignore  README.md  run_quota_sim.sh
RLSLIP_description/: CMakeLists.txt  package.xml
RLSLIP_description/meshes/: base_link.STL
RLSLIP_description/mjcf/: RLSLIP.xml  mjmodel.xml
can/: CMakeLists.txt  package.xml
can/include/: WholeBodyDriver.h
can/src/: WholeBodyDriver.cpp
controller/: CMakeLists.txt  package.xml
controller/include/: Data.h  DeltaMechanism.h  JumpController.h  NNInterface.h
controller/src/: Delta.cpp  DeltaMechanism.cpp  JumpController.cpp  JumpControllerNN.cpp  NNInterface.cpp  RLSLIP.pt  RLSLIP2.pt  network.py  network2.py  param.yaml  test2.pt
mujoco_sim/: CMakeLists.txt  MUJOCO_LOG.TXT  RLSLIP_rl_sim.py  RLSLIP_sim.py  mujoco_base.py  package.xml  quata.xml  quata_sim.py  test3.pt
mujoco_sim/msg/: motor_data.msg
quata/: 123123.html  MUJOCO_LOG.TXT  lowerHukeA.STL  lowerHukeB.STL  lowerHukeC.STL  lowerLegA2.STL  lowerLegC1.STL  quata.xml  upperHukeB.STL  upperLegA.STL  upperLegC.STL
quata1.0/: base_link.STL  lowerLegA1.STL  lowerLegB1.STL  lowerLegB2.STL  upperHukeA.STL
quata_description/: CMakeLists.txt  package.xml
quata_description/RLSLIP_description/: CMakeLists.txt  package.xml
quata_description/RLSLIP_description/meshes/: xdof_Link.STL  ydof_Link.STL  zdof_Link.STL
quata_description/RLSLIP_description/mjcf/: RLSLIP.xml
quata_description/RLSLIP_description/urdf/: RLSLIP.urdf
quata_description/meshes/: End.STL  FootEnd.STL  foot.STL  lowerLegC2.STL  upperHukeC.STL  upperLegB.STL
quata_description/mjcf/: quata.xml
resources/: pt.md
resources/Apr02_21-32-21_/: events.out.tfevents.1712064741.meng-MS-7D89.6146.0
resources/Apr02_21-41-27_/: events.out.tfevents.1712065287.meng-MS-7D89.6508.0
resources/Apr02_21-49-36_/: events.out.tfevents.1712065776.meng-MS-7D89.7387.0
resources/RLSLIP/: events.out.tfevents.1712103436.meng-MS-7D89.4204.0
resources/test2/: RLSLIP_config.py  log.txt
resources/test3/: RLSLIP.py  RLSLIP_config.py  log.txt  logex.txt  play.py
xsens_ros_mti_driver/lib/xspublic/xscommon/: abstractadditionallogger.h  additionalloggerbase.cpp  additionalloggerbase.h  calltracer.h  common_qdebug.h  consolelogger.cpp  consolelogger.h  enumexpandersbase.cpp  enumexpandersbase.h  extendedenum.h  fwupdate.c  fwupdate.h  journalexception.cpp  journalexception.h  journalfile.cpp  journalfile.h  journaller.cpp  journaller.h  journalloglevel.h  journalstackwalker.h  journalthreader.cpp  journalthreader.h  stackdumper.cpp  stackdumper.h  stackwalker.cpp  stackwalker.h  stackwalker_linux.cpp  stackwalker_linux.h  threading.cpp  threading.h  xbus.c  xbus.h  xbusparser.c  xbusparser.h  xprintf.cpp  xprintf.h  xscommon_config.h  xsens_debugtools.h  xsens_generic_matrix.h  xsens_janitors.h  (+5 more)
xsens_ros_mti_driver/lib/xspublic/xscontroller/: broadcastdevice.cpp  broadcastdevice.h  callbackmanagerxda.cpp  callbackmanagerxda.h  clocksynccommand.h  communicator.cpp  communicator.h  communicatorfactory.cpp  communicatorfactory.h  compat.h  datalogger.cpp  datalogger.h  datapacketcache.cpp  datapacketcache.h  dataparser.cpp  dataparser.h  datapoller.cpp  datapoller.h  devicecommunicator.cpp  devicecommunicator.h  devicefactory.cpp  devicefactory.h  deviceredetector.cpp  deviceredetector.h  devicetypes.h  dotdevice.cpp  dotdevice.h  dummy.cpp  enumerateusbdevices.cpp  enumerateusbdevices.h  enumexpanders.cpp  enumexpanders.h  fileloader.h  gpsstatus.h  idfetchhelpers.h  iointerface.cpp  iointerface.h  iointerfacefile.cpp  iointerfacefile.h  iprotocolhandler.h  (+130 more)
xsens_ros_mti_driver/lib/xspublic/xstypes/: datapacket_p.cpp  datapacket_p.h  pstdint.h  resource.h  xsanalogindata.h  xsarray.c  xsarray.h  xsbaud.c  xsbaud.h  xsbaudcode.h  xsbaudrate.h  xsbusid.h  xsbytearray.c  (+147 more)
xsens_ros_mti_driver/src/: main.cpp  xdacallback.cpp  xdacallback.h  xdainterface.cpp  xdainterface.h
xsens_ros_mti_driver/src/messagepublishers/: accelerationpublisher.h  angularvelocitypublisher.h  freeaccelerationpublisher.h  gnsspublisher.h  imupublisher.h  magneticfieldpublisher.h  orientationincrementspublisher.h  orientationpublisher.h  packetcallback.h  positionllapublisher.h  pressurepublisher.h  temperaturepublisher.h  timereferencepublisher.h  transformpublisher.h  twistpublisher.h  velocityincrementpublisher.h  velocitypublisher.h
